--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,17 @@
 .App {
-  text-align: center;
-  background-color: rgb(24, 18, 18);
+  margin: 0 0;
 }
 body{
-  background-color: black;
+  background: linear-gradient(90deg,black,grey);
+
 }
 
-/* .fvideo{
-  z-index: -1;
-  position:absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width:100%;
-  height:100vh;
-  overflow:hidden;
-  
-} */
-/* .container{
-  position: absolute;
-  z-index: 1;
-  width:100%;
-  height:100vh;
-  
-  text-align:center;
-} */
 .recipe{
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  /* flex-wrap: wrap; */
+  margin-top: 4rem;
+  margin-left: 3rem;
+  grid-column-gap: 2rem;
 }
-.rcontain{
-  margin: 1vh;
-  padding: 0vh;
-  background-color: white;
-  height: 60vh;
-  width: 70%;
-  overflow: scroll;
-}
+
